--- a/angular.json
+++ b/angular.json
@@ -68,18 +68,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "fungible:build"
+            "browserTarget": "angular8Coding:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "fungible:build:production"
+              "browserTarget": "angular8Coding:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "fungible:build"
+            "browserTarget": "angular8Coding:build"
           }
         },
         "test": {
@@ -117,15 +117,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "fungible:serve"
+            "devServerTarget": "angular8Coding:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "fungible:serve:production"
+              "devServerTarget": "angular8Coding:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "fungible"
+  "defaultProject": "Angular8CodingExample"
 }
